--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper" id="wrapper">
         <div id="title">
-            <fieldset><legend id="name" class="animation">NAHUEL TRONCOSO</legend></fieldset>
+            <fieldset><legend id="name" class="animation">NAHUEL S TRONCOSO</legend></fieldset>
             <div id="languages" class="languages">
                 <button class="translate" id="es">ES</button>
                 <button class="translate" id="en">EN</button>
