--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper" id="wrapper">
         <div id="title">
-            <fieldset><legend id="name" class="animation">NAHUEL TRONCOSO</legend></fieldset>
+            <fieldset><legend id="name">NAHUEL TRONCOSO</legend></fieldset>
             <div id="languages" class="languages">
                 <button class="translate" id="es">ES</button>
                 <button class="translate" id="en">EN</button>
@@ -41,7 +41,7 @@
                                 <a href="https://nstdev.github.io/Plantilla-de-portafolio/" target="_blank" class="fas fa-link"></a>
                             </div>
                         </summary>
-                        <p id="active" class="lang animationText" key="project1Desc">Portafolio libre de uso, 100% modificable.</p>
+                        <p id="active" class="lang" key="project1Desc">Portafolio libre de uso, 100% modificable.</p>
                         </details>
                     </div>
                     <div class="card">
@@ -53,7 +53,7 @@
                                 <a href="/Resources/Apps/LemonSS.exe" class="fas fa-download"></a>
                             </div>
                         </summary>
-                        <p id="active" class="lang animationText" key="project2Desc">App de screenshot hecha con Python y TKinter.</p>
+                        <p id="active" class="lang" key="project2Desc">App de screenshot hecha con Python y TKinter.</p>
                         </details>
                     </div>
                     <div class="card">
@@ -65,7 +65,7 @@
                                 <a href="/Resources/Apps/MoonSky.exe" class="fas fa-download"></a>
                             </div>
                         </summary>
-                        <p id="active" class="lang animationText" key="project3Desc">App del clima hecha con Python y Tkinter.</p>
+                        <p id="active" class="lang" key="project3Desc">App del clima hecha con Python y Tkinter.</p>
                         </details>
                     </div>
                     <div class="card">
@@ -77,14 +77,14 @@
                                 <a href="/Resources/Apps/Calculadora.exe" class="fas fa-download"></a>
                             </div>
                         </summary>
-                        <p id="active" class="lang animationText" key="project4Desc">Hecha con Python y TKinter.</p>
+                        <p id="active" class="lang" key="project4Desc">Hecha con Python y TKinter.</p>
                         </details>
                     </div>
                 </div>
             </section>
 
             <section id="contact" class="hide">
-                <form action="https://formsubmit.co/c913193a8521e869b7a1caaf2712dbe7" method="POST" class="animation">
+                <form action="https://formsubmit.co/c913193a8521e869b7a1caaf2712dbe7" method="POST">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_next" value="https://nstdev.github.io">
                     <input type="hidden" name="_subject" value="¡Nuevo mensaje!">
@@ -107,8 +107,6 @@
         </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./Scripts/Three/threeModel.js" type="module"></script>
     <script src="/Scripts/main.js" type="text/javascript"></script>
 </body>
