--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             </fieldset>
         </div>
     </div>
-
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./Scripts/Three/threeModel.js" type="module"></script>
     <script src="/Scripts/main.js" type="text/javascript"></script>
 </body>
