--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section id="aboutHS1" class="hide">
                 <div id="about" key="about">
                     <p class="textAbout lang" key="who">Hola, soy Nahuel! Un desarrollador web Argentino.<br>Me gustan los videojuegos, los animales y el diseño, pero por sobre todo, me gusta aprender.</p>
-                    <a href="./Resources/Imgs/CV-NSTR.pdf" id="cvButton" download="CV-NSTR" class="lang animation" key="cv">MI CV ></a>
+                    <a href="./Resources/Imgs/CV-NSTR.pdf" id="cvButton" download="CV-NSTR" class="lang" key="cv">MI CV ></a>
                 </div>
             </section>
 
@@ -84,7 +84,7 @@
             </section>
 
             <section id="contact" class="hide">
-                <form action="https://formsubmit.co/c913193a8521e869b7a1caaf2712dbe7" method="POST">
+                <form action="https://formsubmit.co/c913193a8521e869b7a1caaf2712dbe7" method="POST" class="animation">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_next" value="https://nstdev.github.io">
                     <input type="hidden" name="_subject" value="¡Nuevo mensaje!">
@@ -106,7 +106,7 @@
             </fieldset>
         </div>
     </div>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./Scripts/Three/threeModel.js" type="module"></script>
     <script src="/Scripts/main.js" type="text/javascript"></script>
